--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tersakiti404-cyber/FajarBOTV3.0"
+    "url": "git+https://github.com/benisadewa/reuzsc"
   },
   "keywords": [
     "k"
@@ -42,7 +42,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Tersakiti404-cyber/FajarBOTV3.0/issues"
+    "url": "https://github.com/benisadewa/reuzsc/issues"
   },
-  "homepage": "https://github.com/Tersakiti404-cyber/FajarBOTV3.0#readme"
+  "homepage": "https://github.com/benisadewa/reuzsc#readme"
 }
