--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "BetaBOT",
+  "name": "XBOT",
   "version": "1.0.0",
-  "description": "bot wa yang mudah untuk digunakan",
+  "description": "khusus termux",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
     "@adiwajshing/baileys": "^3.2.1",
-    "axios": "0.21.0",
-    "bash": "0.0.1",
     "brainly-scraper": "^1.0.2",
     "cheerio": "^1.0.0-rc.3",
     "cloudconvert": "^2.1.5",
-    "cwebp": "^2.0.5",
     "got": "^11.8.0",
-    "gtts": "^0.2.1",
     "gulp": "^4.0.2",
     "gulp-webp": "^4.0.1",
     "image-to-base64": "^2.1.1",
@@ -25,7 +21,6 @@
     "text-to-mp3": "^1.0.4",
     "urlencode": "^1.1.0",
     "webp-simple-converter": "^0.0.6",
-    "ytdl": "^1.3.5",
     "ytdl-core": "^3.4.2"
   },
   "devDependencies": {},
@@ -34,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/benisadewa/reuzsc"
+    "url": "git+https://github.com/affisjunianto/botwasap.git"
   },
   "keywords": [
     "k"
@@ -42,7 +37,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/benisadewa/reuzsc/issues"
+    "url": "https://github.com/affisjunianto/botwasap/issues"
   },
-  "homepage": "https://github.com/benisadewa/reuzsc#readme"
+  "homepage": "https://github.com/affisjunianto/botwasap/readme"
 }
